--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         @media (max-width: 768px) {
             body {
                 background-size: cover;
-                background-image: url(https://cdn.discordapp.com/attachments/1037824336930803712/1346804502141079552/terrifier_3.jpg?ex=67c984ef&is=67c8336f&hm=998decdd8aa61071176875ca98aeb8789983129556a1a86731cfbe5d08d28f7b&);
+                background-image: url(https://preview.redd.it/e7meaabwg9yb1.png?auto=webp&s=811d8441d2b615ee883389730d2b68e0490643c6);
                 padding: 10px;
             }
 
