--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <button id="button2">film 2</button>
             <a href="https://discord.gg/79vmBkJnVA" target="_blank">CINÉ LK10</a>
         </div>
-            <iframe id="film-frame" src="https://nuum.ru/embed/videos/4352953-uzhasy-uzhasaiushchii-3-2024" scrolling="no" frameborder="0" allowfullscreen></iframe></div>
+            <iframe id="film-frame" src="https://amg01796-amg01796c6-rakuten-fr-5334.playouts.now.amagi.tv/playlist/amg01796-fastmediafast-beybladefr-rakutenfr/playlist.m3u8" scrolling="no" frameborder="0" allowfullscreen></iframe></div>
   <div id="weather">
             <h2>Météo Actuelle</h2>
             <p id="location">Chargement de la météo...</p>
