--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
     </div>
 
-    <h1>Découvrez le film ужасающий 3</h1>
+    <h1>Découvrez beyblade !</h1>
 
     <div id="content">
         <div> <div id="buttons-container">
